IndexedDB: intversion-long-queue.html fails an assert https://bugs.webkit.org/show_bug.cgi?id=92783

Reviewed by Tony Chang.

Source/WebCore:

onBlocked needs the same shouldEnqueueEvent check that the other
event generators have.

Tests: intversion-long-queue is no longer skipped.

* Modules/indexeddb/IDBRequest.h:
(IDBRequest):
* Modules/indexeddb/IDBVersionChangeRequest.cpp:
(WebCore::IDBVersionChangeRequest::onBlocked):

LayoutTests:

* platform/chromium/TestExpectations:
* storage/indexeddb/intversion-long-queue-expected.txt:
Add some FAIL lines that will be fixed when patch from 92897 lands.
This patch doesn't actually change any behavior,
intversion-long-queue-expected.txt was generated with 92897 patched in
and the test was skipped so it didn't matter.


Canonical link: https://commits.webkit.org/111518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125231 268f45cc-cd09-0410-ab3c-d52691b4dbfc